--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,11 +74,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-   DEPENDENCIES
-   std_msgs
-#	 geometry_msgs
-)
+# generate_messages(
+#    DEPENDENCIES
+#    std_msgs
+#		 geometry_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -143,6 +143,7 @@ include_directories(
 # add_executable(${PROJECT_NAME}_node src/adaptive_grasping_node.cpp)
 
 add_executable(${PROJECT_NAME}_tf_listener src/tf_listener.cpp)
+add_executable(${PROJECT_NAME}_contact_preserver src/contactPreserver.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -160,6 +161,9 @@ add_executable(${PROJECT_NAME}_tf_listener src/tf_listener.cpp)
 # )
 
 target_link_libraries(${PROJECT_NAME}_tf_listener
+   ${catkin_LIBRARIES}
+)
+target_link_libraries(${PROJECT_NAME}_contact_preserver
    ${catkin_LIBRARIES}
 )
 
