--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,11 +74,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#    DEPENDENCIES
-#    std_msgs
-# 	 geometry_msgs
-# )
+generate_messages(
+   DEPENDENCIES
+   std_msgs
+#	 geometry_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
