Resolved conflict of add executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ add_executable(${PROJECT_NAME}_tf_listener src/tf_listener.cpp)
 # add_executable(${PROJECT_NAME}_node ${ADAPTIVE_SOURCE_FILES})
 
 #TESTS
+add_executable(${PROJECT_NAME}_contactState_test test/test_contact_state.cpp ${ADAPTIVE_SOURCE_FILES})
 add_executable(${PROJECT_NAME}_test_matricesCreator test/test_matrices_creator.cpp ${ADAPTIVE_SOURCE_FILES})
 add_executable(${PROJECT_NAME}_test_contactPreserver test/test_contact_preserver.cpp ${ADAPTIVE_SOURCE_FILES})
 
@@ -183,6 +184,9 @@ target_link_libraries(${PROJECT_NAME}_test_matricesCreator
    ${catkin_LIBRARIES}
 )
 target_link_libraries(${PROJECT_NAME}_test_contactPreserver
+   ${catkin_LIBRARIES}
+)
+target_link_libraries(${PROJECT_NAME}_contactState_test
    ${catkin_LIBRARIES}
 )
 
