--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -15,3 +15,4 @@ adaptive_grasping:
     world_name: "world"
     palm_name: "right_hand_palm_link"
     ee_name: "right_hand_ee_link"
+    joints_num: [5, 7, 7, 7, 7]
