For setting the verbosity to DEBUG

--- a/config/rosconsole.conf
+++ b/config/rosconsole.conf
@@ -1,2 +1,3 @@
 # Set verbosity level to debug
-log4j.logger.ros.soft_hand_controllers = DEBUG
+# log4j.logger.ros.lwr_controllers = DEBUG
+log4j.logger.ros.finger_fk = DEBUG
