--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -5,14 +5,24 @@
 adaptive_grasping:
   # The following map contains the correspondance between ids and link names
   link_names_map:
-    1: "right_hand_thumb_distal_link"
-    2: "right_hand_index_distal_link"
-    3: "right_hand_middle_distal_link"
-    4: "right_hand_ring_distal_link"
-    5: "right_hand_little_distal_link"
+    "1" : "right_hand_thumb_distal_link"
+    "2" : "right_hand_index_distal_link"
+    "3" : "right_hand_middle_distal_link"
+    "4" : "right_hand_ring_distal_link"
+    "5" : "right_hand_little_distal_link"
   # The following map contains other necessary params for adaptive_grasping
   params_map:
     world_name: "world"
     palm_name: "right_arm_7_link"
     ee_name: "right_hand_ee_link"
     joints_num: [5, 7, 7, 7, 7]
+  # The following list of arrays is the contact selection matrix H
+  h_matrix:
+    - [1, 0, 0, 0, 0, 0]
+    - [0, 1, 0, 0, 0, 0]
+    - [0, 0, 1, 0, 0, 0]
+    - [0, 0, 0, 1, 0, 0]
+    - [0, 0, 0, 0, 1, 0]
+    - [0, 0, 0, 0, 0, 1]
+
+
