--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -3,6 +3,8 @@
 # from the src code.
 
 adaptive_grasping:
+  # The topic where the finger touches data is published
+  touch_topic_name: "/touching_finger_topic"
   # The following map contains the correspondance between ids and link names
   link_names_map:
     "1" : "right_hand_thumb_distal_link"
@@ -15,7 +17,8 @@ adaptive_grasping:
     world_name: "world"
     palm_name: "right_arm_7_link"
     ee_name: "right_hand_ee_link"
-    joints_num: [5, 7, 7, 7, 7]
+  # The array containing the number of links of each finger
+  joints_num: [5, 7, 7, 7, 7]
   # The following list of arrays is the contact selection matrix H
   h_matrix:
     - [1, 0, 0, 0, 0, 0]
