--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -27,5 +27,24 @@ adaptive_grasping:
     - [0, 0, 0, 1, 0, 0]
     - [0, 0, 0, 0, 1, 0]
     - [0, 0, 0, 0, 0, 1]
-
+  # The following list of arrays is the minimization weight matrix A tilde
+  a_tilde_matrix:
+    - [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+    - [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+    - [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+    - [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+    - [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]
+    - [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]
+    - [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]
+    - [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]
+    - [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0]
+    - [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0]
+    - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]
+    - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0]
+    - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]
+  # The following array is the desired x motion
+  x_d:
+    - [0.1, 0, 0, -0.01, -0.05, 0, 0, 0, 0, 0, 0, 0, 0]
+  # The rate of the adaptive loop
+  spin_rate: 1000.0
 
