--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -47,4 +47,9 @@ adaptive_grasping:
     - [0.1, 0, 0, -0.01, -0.05, 0, 0, 0, 0, 0, 0, 0, 0]
   # The rate of the adaptive loop
   spin_rate: 1000.0
+  # The topic where the object pose is published
+  object_topic_name: "/object_pose_topic"
+  # The scaling factor for the reference motion
+  scaling: 1.0
+
 
