--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -24,9 +24,9 @@ adaptive_grasping:
     - [1, 0, 0, 0, 0, 0]
     - [0, 1, 0, 0, 0, 0]
     - [0, 0, 1, 0, 0, 0]
-    # - [0, 0, 0, 1, 0, 0]
-    # - [0, 0, 0, 0, 1, 0]
-    # - [0, 0, 0, 0, 0, 1]
+    - [0, 0, 0, 1, 0, 0]
+    - [0, 0, 0, 0, 1, 0]
+    - [0, 0, 0, 0, 0, 1]
   # The following list of arrays is the minimization weight matrix A tilde
   a_tilde_matrix:
     - [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
@@ -44,7 +44,8 @@ adaptive_grasping:
     - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10000]
   # The following array is the desired x motion
   x_d:
-    - [0.1, 0, 0, -0.01, 0.05, 0, 0, 0, 0, 0, 0, 0, 0]
+    # - [0.1, 0, 0, -0.01, 0, -0.05, 0, 0, 0, 0, 0, 0, 0]     # for other fingers mainly?
+    - [0.1, 0, 0, -0.01, 0.05, 0, 0, 0, 0, 0, 0, 0, 0]    # for thumb mainly?
   # The rate of the adaptive loop
   spin_rate: 1000.0
   # The topic where the object pose is published
