--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   velCommand.srv
+  adaptiveGrasp.srv
 )
 
 ## Generate actions in the 'action' folder
