--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -56,5 +56,7 @@ adaptive_grasping:
   p_vector:
     # - [1, 2, 4, 5, 6, 3]      # for relaxing only the velocity along local z (FULLY CONSTRAINED)
     - [1, 2, 3]               # for relaxing only the velocity along local z (POSITION CONSTRAINED)
+  # The threshold on the synergy joint value for stopping the grasping motion
+  syn_thresh: 0.8
 
 
