Removing robotCommanderJT from CMake as it has issues with pkg urdf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(catkin REQUIRED COMPONENTS
 	finger_fk
   message_generation
   eigen_conversions
+  urdf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -154,7 +155,7 @@ set(ADAPTIVE_SOURCE_FILES
 	src/matricesCreator.cpp
 	src/contactPreserver.cpp
 	src/robotCommander.cpp
-  src/robotCommanderJT.cpp
+  # src/robotCommanderJT.cpp
 )
 
 add_executable(${PROJECT_NAME}_tf_listener src/tf_listener.cpp)
@@ -166,7 +167,7 @@ add_executable(${PROJECT_NAME}_test_contactState test/test_contact_state.cpp ${A
 add_executable(${PROJECT_NAME}_test_matricesCreator test/test_matrices_creator.cpp ${ADAPTIVE_SOURCE_FILES})
 add_executable(${PROJECT_NAME}_test_contactPreserver test/test_contact_preserver.cpp ${ADAPTIVE_SOURCE_FILES})
 add_executable(${PROJECT_NAME}_test_StateCreatorPreserver test/test_state_creator_preserver.cpp ${ADAPTIVE_SOURCE_FILES})
-add_executable(${PROJECT_NAME}_test_robotCommanderJT test/test_robot_commander_jt.cpp ${ADAPTIVE_SOURCE_FILES})
+# add_executable(${PROJECT_NAME}_test_robotCommanderJT test/test_robot_commander_jt.cpp ${ADAPTIVE_SOURCE_FILES})
 
 #set_target_properties(${PROJECT_NAME}_test_StateCreatorPreserver PROPERTIES COMPILE_FLAGS "-o0")
 
@@ -182,7 +183,7 @@ add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catk
 add_dependencies(${PROJECT_NAME}_robotCommander ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} adaptive_grasping_gencpp)
 add_dependencies(${PROJECT_NAME}_test_contactState ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} finger_fk_gencpp)
 add_dependencies(${PROJECT_NAME}_test_StateCreatorPreserver ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} finger_fk_gencpp)
-add_dependencies(${PROJECT_NAME}_test_robotCommanderJT ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} adaptive_grasping_gencpp)
+# add_dependencies(${PROJECT_NAME}_test_robotCommanderJT ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} adaptive_grasping_gencpp)
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
@@ -212,9 +213,9 @@ target_link_libraries(${PROJECT_NAME}_test_contactState
 target_link_libraries(${PROJECT_NAME}_test_StateCreatorPreserver
    ${catkin_LIBRARIES}
 )
-target_link_libraries(${PROJECT_NAME}_test_robotCommanderJT
-   ${catkin_LIBRARIES}
-)
+# target_link_libraries(${PROJECT_NAME}_test_robotCommanderJT
+#    ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
