Minor changes for debugging the generated x_ref (twist)

--- a/config/rosconsole.conf
+++ b/config/rosconsole.conf
@@ -1,4 +1,4 @@
 # Set verbosity level to debug
 # log4j.logger.ros.lwr_controllers = DEBUG
 # log4j.logger.ros.finger_fk = DEBUG
-log4j.logger.ros.soft_hand_controllers = DEBUG
+# log4j.logger.ros.soft_hand_controllers = DEBUG
