--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -24,9 +24,9 @@ adaptive_grasping:
     - [1, 0, 0, 0, 0, 0]
     - [0, 1, 0, 0, 0, 0]
     - [0, 0, 1, 0, 0, 0]
-    # - [0, 0, 0, 1, 0, 0]
-    # - [0, 0, 0, 0, 1, 0]
-    # - [0, 0, 0, 0, 0, 1]
+    - [0, 0, 0, 1, 0, 0]
+    - [0, 0, 0, 0, 1, 0]
+    - [0, 0, 0, 0, 0, 1]
   # The following list of arrays is the minimization weight matrix A tilde
   a_tilde_matrix:
     - [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
@@ -44,7 +44,7 @@ adaptive_grasping:
     - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10000]
   # The following array is the desired x motion
   x_d:
-    - [0.1, 0, 0, -0.01, 0, -0.05, 0, 0, 0, 0, 0, 0, 0]     # for other fingers mainly?
+    - [0.1, 0.01, 0, -0.01, 0, -0.05, 0, 0, 0, 0, 0, 0, 0]     # for other fingers mainly?
     # - [0.1, 0, 0, -0.01, 0.05, 0, 0, 0, 0, 0, 0, 0, 0]    # for thumb mainly?
   # The rate of the adaptive loop
   spin_rate: 1000.0
@@ -54,8 +54,7 @@ adaptive_grasping:
   scaling: 1.0
   # The permutation vector for relaxed minimization (the elements of the vector stand for the reordering of the rows of Q) (CHANGE ALSO h_matrix ACCORDINGLY)
   p_vector:
-    # - [1, 2, 4, 5, 6, 3]      # for relaxing only the velocity along local z (FULLY CONSTRAINED)
-    - [1, 2, 3]               # for relaxing only the velocity along local z (POSITION CONSTRAINED)
+    - [1, 2, 4, 5, 6, 3]      # for the order of relaxation
   # The threshold on the synergy joint value for stopping the grasping motion
   syn_thresh: 0.8
 
