minor changes to yaml

--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -44,14 +44,14 @@ adaptive_grasping:
     - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10000]
   # The following array is the desired x motion
   x_d:
-    - [0.1, 0.01, 0, -0.01, 0, -0.05, 0, 0, 0, 0, 0, 0, 0]     # for other fingers mainly?
-    # - [0.1, 0, 0, -0.01, 0.05, 0, 0, 0, 0, 0, 0, 0, 0]    # for thumb mainly?
+    # - [0.1, 0.01, 0, -0.01, 0, -0.05, 0, 0, 0, 0, 0, 0, 0]     # for other fingers mainly?
+    - [0.1, 0, 0, -0.01, 0.05, 0, 0, 0, 0, 0, 0, 0, 0]    # for thumb mainly?
   # The rate of the adaptive loop
   spin_rate: 1000.0
   # The topic where the object pose is published
   object_topic_name: "/object_pose_topic"
   # The scaling factor for the reference motion
-  scaling: 1.0
+  scaling: 2.0
   # The permutation vector for relaxed minimization (the elements of the vector stand for the reordering of the rows of Q) (CHANGE ALSO h_matrix ACCORDINGLY)
   p_vector:
     - [6, 3, 4, 5, 1, 2]      # for the order of relaxation
