--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -15,7 +15,7 @@ adaptive_grasping:
   # The following map contains other necessary params for adaptive_grasping
   params_map:
     world_name: "world"
-    palm_name: "right_arm_7_link"
+    palm_name: "panda_EE"
     ee_name: "right_hand_ee_link"
   # The array containing the number of links of each finger
   joints_num: [5, 7, 7, 7, 7]
@@ -52,7 +52,7 @@ adaptive_grasping:
   # The rate of the adaptive loop
   spin_rate: 1000.0
   # The topic where the object pose is published
-  object_topic_name: "/object_pose_topic"
+  object_topic_name: "/object_pose"
   # The scaling factor for the reference motion
   scaling: 1.0
   # The permutation vector for relaxed minimization (the elements of the vector stand for the reordering of the rows of Q) (CHANGE ALSO h_matrix ACCORDINGLY)
