--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -15,7 +15,7 @@ adaptive_grasping:
   # The following map contains other necessary params for adaptive_grasping
   params_map:
     world_name: "world"
-    palm_name: "panda_EE"
+    palm_name: "right_hand_ee_link"
     ee_name: "right_hand_ee_link"
   # The array containing the number of links of each finger
   joints_num: [5, 7, 7, 7, 7]
