--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,7 @@
   <build_depend>finger_fk</build_depend>
   <build_depend>message_runtime</build_depend>
   <build_depend>urdf</build_depend>
+  <build_depend>filters</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -70,6 +71,7 @@
   <exec_depend>finger_fk</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>urdf</exec_depend>
+  <exec_depend>filters</exec_depend>
   
   
 
