--- a/package.xml
+++ b/package.xml
@@ -57,6 +57,9 @@
   <build_depend>message_runtime</build_depend>
   <build_depend>urdf</build_depend>
   <build_depend>filters</build_depend>
+  <!-- <build_depend>panda_softhand_control</build_depend> -->
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>controller_manager_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -72,9 +75,9 @@
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>filters</exec_depend>
-  
-  
-
+  <!-- <exec_depend>panda_softhand_control</exec_depend> -->
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>controller_manager_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
