--- a/package.xml
+++ b/package.xml
@@ -57,9 +57,13 @@
   <build_depend>message_runtime</build_depend>
   <build_depend>urdf</build_depend>
   <build_depend>filters</build_depend>
-  <!-- <build_depend>panda_softhand_control</build_depend> -->
+  <build_depend>panda_softhand_control</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>controller_manager_msgs</build_depend>
+  <build_depend>moveit_msgs</build_depend>
+  <build_depend>moveit_ros_planning</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
+  <build_depend>moveit_core</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -78,6 +82,10 @@
   <!-- <exec_depend>panda_softhand_control</exec_depend> -->
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>controller_manager_msgs</exec_depend>
+  <exec_depend>moveit_msgs</exec_depend>
+  <exec_depend>moveit_ros_planning</exec_depend>
+  <exec_depend>moveit_ros_planning_interface</exec_depend>
+  <exec_depend>moveit_core</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
