--- a/config/full_grasp_params.yaml
+++ b/config/full_grasp_params.yaml
@@ -20,7 +20,7 @@ full_grasper:
   # Transform from object frame to grasp pose frame (xyzrpy) (DEFAULT)
   grasp_transform: [0.0, 0.0, 0.090, -3.1415, 0.0, 0.0]
   # Transform from grasp pose frame to pre-grasp pose frame (xyzrpy)
-  pre_grasp_transform: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+  pre_grasp_transform: [0.0, 0.0, -0.1, 0.0, 0.0, 0.0]
   # The joint configuration for handover
   handover_joints: [-0.101, 0.161, 0.159, -1.651, 2.023, 2.419, -0.006]
   # The threshold on tau_ext for handover hand opening
@@ -29,8 +29,9 @@ full_grasper:
   # The personalized grasp pose maps for different objects
   poses_map:
     "kettle" : [0.066, 0.012, 0.203, -2.973, 0.620, -0.032]
-    "teddy" : [0.046, -0.238, 0.106, 3.131, -0.052, -0.400]
-    "ball" : [-0.055, 0.113, 0.07, -3.104, 0.122, -0.241]
+    "teddy" : [0.046, -0.238, 0.110, 3.131, -0.052, -0.400]
+    "ball_thumb" : [-0.055, 0.113, 0.07, -3.104, 0.122, -0.241]
+    "ball_middle" : [-0.055, 0.113, 0.09, -3.104, 0.122, -0.241]
     "two_cubes" : [-0.055, 0.113, 0.061, -3.104, 0.122, -0.241]
     "bottle" : [0.051, -0.076, 0.077, -2.560, -0.240, 0.353]
     "helmet" : [0.120, -0.039, 0.179, 3.007, 0.200, 0.247]
