--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -63,7 +63,8 @@ adaptive_grasping:
   scaling: 1.0
   # The permutation vector for relaxed minimization (the elements of the vector stand for the reordering of the rows of Q) (CHANGE ALSO h_matrix ACCORDINGLY)
   p_vector:
-    - [19, 17, 18, 5, 6, 7, 2, 3, 4, 16, 14, 15, 8, 9, 10, 11, 12, 13, 1]              # fully constrained
+    # - [19, 17, 18, 5, 6, 7, 2, 3, 4, 16, 14, 15, 8, 9, 10, 11, 12, 13, 1]              # Giorgio order - OK 1 touch (only position), NOT OK more touches (strange)
+    - [5, 6, 7, 2, 3, 4, 19, 17, 18, 16, 14, 15, 8, 9, 10, 11, 12, 13, 1]              # Other order
   p_vector_2:
     - [2, 3, 1]                       # position constrained
   # The vector containing the indexes of the touch constraints
