--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -79,11 +79,15 @@ adaptive_grasping:
   relax_to_zero: false
   # The bool to decide if to change contact selection when touch occurs
   touch_change: true
-  # The number of tasks for the RP Manger (Contact Preserver)
-  num_tasks: 4
+  # The number of tasks for the RP Manger (Contact Preserver) if num_tasks == 2 -> basic two tasks relaxation RP
+  num_tasks: 2
   # The dimensions of the tasks for the RP Manger (Contact Preserver)
   # Please remember that the last tasks dimension changes because no of contacts (so, all the exceeding and remaining rows will be included)
   dim_tasks:
     - [1, 6, 6, 6]
+  # The lambda max for the pseudo inversion in RP Manager
+  lambda_max = 1000;
+  # The epsilon for the diagonal loading in singular value decomposition in RP Manager
+  epsilon = 0.1;
 
 
