--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -84,7 +84,10 @@ adaptive_grasping:
   # The dimensions of the tasks for the RP Manger (Contact Preserver)
   # Please remember that the last tasks dimension changes because no of contacts (so, all the exceeding and remaining rows will be included)
   dim_tasks:
-    - [1, 6, 6, 6]
+    - [1, 6, 6, 6]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH num_tasks
+  # The priority of the above defined tasks
+  prio_tasks:
+    - [1, 2, 3, 4]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH num_tasks
   # The lambda max for the pseudo inversion in RP Manager
   lambda_max = 1000;
   # The epsilon for the diagonal loading in singular value decomposition in RP Manager
