--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -66,8 +66,9 @@ adaptive_grasping:
   p_vector:
     # - [19, 17, 18, 5, 6, 7, 2, 3, 4, 16, 14, 15, 8, 9, 10, 11, 12, 13, 1]              # Giorgio order - OK 1 touch (only position), NOT OK more touches (strange)
     # - [5, 6, 7, 2, 3, 4, 19, 17, 18, 16, 14, 15, 8, 9, 10, 11, 12, 13, 1]              # George First order - NOT BAD for middle but hand goes up for thumb
-    - [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 19, 17, 18, 16, 14, 15, 1]              # George Second order - NOT BAD for middle but thumb not still - 2 fingers ok
+    # - [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 19, 17, 18, 16, 14, 15, 1]              # George Second order - NOT BAD for middle but thumb not still - 2 fingers ok
     # - [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 17, 18, 19, 15, 16, 14]              # Old order -
+      - [2, 3, 4, 5, 6, 7, 19, 17, 18, 11, 12, 13, 8, 9, 10, 16, 14, 15, 1]              # For RP
   p_vector_2:
     - [2, 3, 1]                       # position constrained
   # The vector containing the indexes of the touch constraints
@@ -80,15 +81,17 @@ adaptive_grasping:
   # The bool to decide if to change contact selection when touch occurs
   touch_change: true
   # The number of tasks for the RP Manger (Contact Preserver) if num_tasks == 2 -> basic two tasks relaxation RP
-  num_tasks: 2
+  num_tasks: 6
   # The dimensions of the tasks for the RP Manger (Contact Preserver)
   # Please remember that the last tasks dimension changes because no of contacts (so, all the exceeding and remaining rows will be included)
-  dim_tasks: [1, 6, 6, 6]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH num_tasks
+  # dim_tasks: [1, 6, 6, 6]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH num_tasks
+  dim_tasks: [1, 3, 3, 3, 3, 6]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH num_tasks
   # The priority of the above defined tasks
-  prio_tasks: [2, 4, 3, 1]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH num_tasks
+  # prio_tasks: [2, 4, 3, 1]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH num_tasks
+  prio_tasks: [2, 5, 6, 3, 4, 1]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH num_tasks
   # The lambda max for the pseudo inversion in RP Manager
-  lambda_max: 10.0
+  lambda_max: 0.01
   # The epsilon for the diagonal loading in singular value decomposition in RP Manager
-  epsilon: 0.01
+  epsilon: 0.0001
 
 
