--- a/config/full_grasp_params.yaml
+++ b/config/full_grasp_params.yaml
@@ -31,8 +31,9 @@ full_grasper:
     "kettle" : [0.066, 0.012, 0.203, -2.973, 0.620, -0.032]
     "teddy" : [0.046, -0.238, 0.110, 3.131, -0.052, -0.400]
     "ball_thumb" : [-0.055, 0.113, 0.07, -3.104, 0.122, -0.241]
-    "ball_middle" : [-0.055, 0.113, 0.07, -3.104, 0.122, -0.241]
+    "ball_middle" : [-0.055, 0.113, 0.085, -3.104, 0.122, -0.241]
     "two_cubes" : [-0.055, 0.113, 0.061, -3.104, 0.122, -0.241]
     "bottle" : [0.051, -0.076, 0.077, -2.560, -0.240, 0.353]
     "helmet" : [0.120, -0.039, 0.179, 3.007, 0.200, 0.247]
     "debug" : [0.013, 0.012, 0.338, -1.512, 0.021, -0.005]
+    "sponge" : [0.089, 0.008, 0.087, 3.086, 0.030, 0.057]
