--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -81,11 +81,11 @@ adaptive_grasping:
   # The bool to decide if to change contact selection when touch occurs
   touch_change: true
   # The number of tasks for the RP Manger (Excluding contact tasks) (Contact Preserver) if num_tasks == 2 -> basic two tasks relaxation RP
-  num_tasks: 2
+  num_tasks: 4
   # The dimensions of the tasks for the RP Manger (Contact Preserver) (The last ones from the num_task_th element are the ones on touch)
-  dim_tasks: [1, 3, 3, 3, 3, 3, 3]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
+  dim_tasks: [1, 3, 3, 6, 2, 1, 2, 1]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
   # The priority of the above defined tasks (The last ones from the num_task_th element are the ones on touch)
-  prio_tasks: [1, 6, 7, 4, 5, 2, 3]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
+  prio_tasks: [6, 7, 8, 1, 2, 3, 5, 4]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
   # The lambda max for the pseudo inversion in RP Manager
   lambda_max: 0.00001
   # The epsilon for the diagonal loading in singular value decomposition in RP Manager
